Fix sticky and open modal interaction at cost of slightly shifting upon opening modal.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,3 +83,4 @@
 html {
   @apply overflow-y-scroll;
 }
+body { @apply !min-w-full; }
